
7. Adjust the limit for "must have" code unit searching, in particular,
increase it substantially for non-anchored patterns.

8. Allow (*ACCEPT) to be quantified, because an ungreedy quantifier with a zero 
minimum is potentially useful.

9. Some changes to the way the minimum subject length is handled:

   * When PCRE2_NO_START_OPTIMIZE is set, no minimum length is computed; 
     pcre2test omits this item instead of showing a value of zero.
     
   * When no minimum length is set by the normal scan, but a first and/or last 
     code unit is recorded, set the minimum to 1 or 2 as appropriate.
     
   * When a pattern contains multiple groups with the same number, a back
     reference cannot know which one to scan for a minimum length. This used to
     cause the minimum length finder to give up with no result. Now it treats
     such references as not adding to the minimum length (which it should have 
     done all along).
     
   * Furthermore, the above action now happens only if the back reference is to 
     a group that exists more than once in a pattern instead of any back 
     reference in a pattern with duplicate numbers.  
     
10. A (*MARK) value inside a successful condition was not being returned by the 
interpretive matcher (it was returned by JIT). This bug has been mended.

11. A bug in pcre2grep meant that -o without an argument (or -o0) didn't work 
if the pattern had more than 32 capturing parentheses. This is fixed. In 
addition (a) the default limit for groups requested by -o<n> has been raised to 
50, (b) the new --om-capture option changes the limit, (c) an error is raised 
if -o asks for a group that is above the limit.


Version 10.33 16-April-2019
---------------------------

1. Added "allvector" to pcre2test to make it easy to check the part of the
ovector that shouldn't be changed, in particular after substitute and failed or
partial matches.

2. Fix subject buffer overread in JIT when UTF is disabled and \X or \R has